# Camera_project

./: .gitmodules  Flashing guide.txt  README.md  camera_main.c  local_components_list.temp.yml  sdkconfig  sdkconfig.old
3D models/: Camera_Back_V6.stl  Camera_Main_V6.stl
App/: ESP_Connect.ui  ESP_UI.py  ESP_UI.spec  Test2.spec  app.py  app.spec  esp_serial.py  test.spec
PCB/: .~lock.BOM_WC_Mouser.ods#  BOM_WC_Mouser.ods  Wear Camera.csv
PCB/Final Gerber Version/: Wear Camera-bottom-pos.csv  Wear Camera-top-pos.csv
PCB/Final Gerber Version/FOR JLC/: WearCAm_Top_Bottom_pos.xlsx  WearCam_BOM_JLC.xlsx
PCB/Final Gerber Version/Gerber/: Wear Camera-B_Cu.gbr  Wear Camera-B_Mask.gbr  Wear Camera-B_Paste.gbr  Wear Camera-B_Silkscreen.gbr  Wear Camera-Edge_Cuts.gbr  Wear Camera-F_Cu.gbr  Wear Camera-F_Mask.gbr  Wear Camera-F_Paste.gbr  Wear Camera-F_Silkscreen.gbr  (+5 more)
PCB/FootPrints/: 3000.step  BAT_3000.kicad_mod  EVPBB4A9B000.kicad_sym  EVPBB4A9B000.step  OMRON_XF2M-2415-1A.kicad_mod  SW_EVPBB4A9B000.kicad_mod  XF2M-2415-1A.STEP
PCB/Wear Camera/: .~lock.BOM_WearCamera.csv#  BOM_WearCamera.csv  Wear Camera BOM.csv  Wear Camera.kicad_pcb  Wear Camera.kicad_prl  Wear Camera.kicad_pro  Wear Camera.kicad_sch  Wear Camera1.gcode.3mf  WearCam_Components_Lib.kicad_sym  fp-info-cache  fp-lib-table  mcu.kicad_sch  power.kicad_sch  sim.kicad_sch  sym-lib-table
backup/: console_example_main.c
main/: CMakeLists.txt  Kconfig.projbuild  camera_main.c  console_example_main.c  ds3231.c  ds3231.h  esp_camera.c  example_config.h  i2cdev.h  idf_component.yml
main/DS3231/: qdq
(+3 files in other folders)
